fix: update light green color variables in globals.css and refactor DonationTable component for improved structure and readability

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,8 +32,9 @@
   /* ... */
 
   /* Light Green */
-  --light-green: #4e5e40ea;
-  --light-green-100: #233a0e;
+  --light-green: #639c31ea;
+  --light-green-200: #54832f;
+  --light-green-100: #2d4b13;
   /* ... */
 }
 
